--- a/_includes/none/intro.html
+++ b/_includes/none/intro.html
@@ -8,6 +8,6 @@ will learn about the leading suite of packages known as the Tidyverse,
 what tidy data really is, and how to practically achieve it with
 packages such as dplyr, tidyr and ggplot.
 
-Plan to attend both days of this course.
+Plan to attend both days of this course <strong>face-to-face on the JAX Bar Harbor campus</strong>.
 
 </p>
