--- a/_includes/none/intro.html
+++ b/_includes/none/intro.html
@@ -1,13 +1,14 @@
 <p>
-Master the Tidyverse presents packages to simplify data cleaning,
-analysis, and visualization in the R programming language. If you work
-with data, you probably spend a lot of time cleaning it and wrangling it
-into the correct shape. This course will show you how you can use R to efficiently
-clean and wrangle your data into a format that’s ready for analysis. You
-will learn about the leading suite of packages known as the Tidyverse,
-what tidy data really is, and how to practically achieve it with
-packages such as dplyr, tidyr and ggplot.
 
+This two-days introductory workshop focuses on boosting your data analysis and visualization expertise with R programming language.
+
+The workshop is based on the R package Tidyverse (https://www.tidyverse.org/) and the R graphical user interface (GUI) RStudio (https://rstudio.com/). The tutors will guide you from loading your data in R, choosing a nice tidy data format, through data transformations, statistical modelling and cool visualizations, to communicating results in a reproducible report. We will proceed through a series of exercises. 
+
+At the end of the workshop, you will master publication-ready visualizations with ggplot2, data transformations and summarizing with dplyr and tidyr, working with dates, character strings, untidy data formats, generating reproducible reports with R Markdown, reading data with fast readr functions, and iterate through them with purrr package.
+
+The course is highly inspired by the Garrett Grolemund’s course Master The Tidyverse. Due to space capacity, the workshop will be strictly limited to 20 participants. The course is offered for free. Every participant gets a collection of RStudio cheat-sheets.
+  
+  
 Plan to attend both days of this course <strong>face-to-face on the JAX Bar Harbor campus</strong>.
 
 </p>
