--- a/_includes/none/who.html
+++ b/_includes/none/who.html
@@ -2,6 +2,6 @@
   <strong>Who:</strong>
   The course is aimed at students and other researchers.
   <strong>
-    You should have basic R programming skills to succeed in this course.
+    Basic R programming skills will be an advantage but true beginners are welcome as well. 
   </strong>
 </p>
