--- a/_includes/none/schedule.html
+++ b/_includes/none/schedule.html
@@ -2,14 +2,13 @@
   <div class="col-md-6">
     <h3>Tue Sep 13</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td></td> </tr>
-      <tr> <td>09:45</td>  <td></td></tr>
+      <tr> <td>09:00</td> Data Visualization <td></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td></td> </tr>
+      <tr> <td>10:45</td>  <td> Data Transformation </td> </tr>
       <tr> <td>12:00</td>  <td>LUNCH</td> </tr>
-      <tr> <td>1:00</td>  <td></td> </tr>
+      <tr> <td>1:00</td>  <td>Data Transformation (continued)</td> </tr>
       <tr> <td>2:30</td>  <td>Break</td> </tr>
-      <tr> <td>2:45</td>  <td></td> </tr>
+      <tr> <td>2:45</td>  <td>Reporting</td> </tr>
       <tr> <td>4:55</td>  <td>Wrap-up</td> </tr>
       <tr> <td>5:00</td>  <td>END</td> </tr>
     </table>
@@ -17,15 +16,13 @@
   <div class="col-md-6">
     <h3>Wed Sep 14</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td></td> </tr>
-      <tr> <td>09:45</td>  <td></td> </tr>
-      <tr> <td>10:30</td>  <td></td> </tr>
+      <tr> <td>09:00</td>  <td>Joining Data</td> </tr>
       <tr> <td>10:45</td>  <td>Break</td> </tr>
-      <tr> <td>11:00</td>  <td></td> </tr>
+      <tr> <td>11:00</td>  <td>Types</td> </tr>
       <tr> <td>12:00</td>  <td>LUNCH</td> </tr>
-      <tr> <td>1:00</td>  <td></td> </tr>
+      <tr> <td>1:00</td>  <td>Tidy Data</td> </tr>
       <tr> <td>2:30</td>  <td>Break</td> </tr>
-      <tr> <td>2:45</td>  <td></td> </tr>
+      <tr> <td>2:45</td>  <td>Lists</td> </tr>
       <tr> <td>4:55</td>  <td>Wrap-up</td> </tr>
       <tr> <td>5:00</td>  <td>END</td> </tr>
     </table>
